re-enable master deploys

--- a/circle.yml
+++ b/circle.yml
@@ -33,8 +33,8 @@ notify:
     # gitter hook
     - url: https://webhooks.gitter.im/e/bf9c8f0282b914859ce2
 deployment:
-  # hub:
-  #   branch: [master]
-  #   commands:
-  #     - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-  #     - docker push drewwells/wellington
+  hub:
+    branch: [master]
+    commands:
+      - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+      - docker push drewwells/wellington
