--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_script:
   - free
   - vmstat
 script:
-  - make test install
+  - make install test
 after_failure:
 after_success:
 notifications:
