--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ os:
   - windows
 env:
   - GOARCH=amd64
+  - PKG_CONFIG_PATH=$(pwd)/libsass/lib/pkgconfig
 before_install:
   - sed -E -i 's|git://github.com/([A-Za-z0-9_]+)/tsuru.git|https://github.com/\1/tsuru|g' .git/config
   - cat .git/config
