goveralls inside container

--- a/circle.yml
+++ b/circle.yml
@@ -5,6 +5,7 @@ machine:
     LIBSASS_VERSION: $(cat $HOME/$CIRCLE_PROJECT_REPONAME/.libsass_version)
     PROJECT_ROOT: $HOME/.go_workspace/src/github.com/wellington/wellington
     PKG_CONFIG_PATH: "$HOME/$CIRCLE_PROJECT_REPONAME/libsass/lib/pkgconfig"
+    GIT_BRANCH: $CIRCLE_BRANCH
 dependencies:
   cache_directories:
   pre:
