--- a/circle.yml
+++ b/circle.yml
@@ -8,14 +8,16 @@ machine:
     GIT_BRANCH: $CIRCLE_BRANCH
 dependencies:
   cache_directories:
+    - libsass
   pre:
     - docker version #report version
     - go get -f -u -d github.com/wellington/spritewell
     - go get gopkg.in/fsnotify.v1
     - echo $LIBSASS_VERSION
-    #- make deps
   override:
     - echo $PROJECT_ROOT/hello
+  post:
+    - make install
 checkout:
   post:
     - mkdir -p ${GOPATH%%:*}/src/github.com/${CIRCLE_PROJECT_USERNAME}
@@ -23,10 +25,11 @@ checkout:
     - cp -R $(pwd) ${GOPATH%%:*}/src/github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}
 test:
   override:
-    - make build #attempt building a container
+    - make test
   post:
-    #- goxc -tasks='xc archive' -bc 'linux' -arch 'amd64' -d $CIRCLE_ARTIFACTS -n wt -wd wt
-    #- cd $PROJECT_ROOT && GIT_BRANCH=$CIRCLE_BRANCH goveralls -coverprofile=profile.cov -service=circleci -repotoken $COVERALLS_TOKEN
+    - goxc -tasks='xc archive' -bc 'linux' -arch 'amd64' -d $CIRCLE_ARTIFACTS -n wt -wd wt
+    - cd $PROJECT_ROOT && GIT_BRANCH=$CIRCLE_BRANCH goveralls -coverprofile=profile.cov -service=circleci -repotoken $COVERALLS_TOKEN
+    - make build #attempt building a container
 
 notify:
   webhooks:
