--- a/circle.yml
+++ b/circle.yml
@@ -28,8 +28,7 @@ test:
     - cd $PROJECT_ROOT && make test
   post:
     - goxc -tasks='xc archive' -bc 'linux' -arch 'amd64' -d $CIRCLE_ARTIFACTS -n wt -wd wt
-    - cd $PROJECT_ROOT && GIT_BRANCH=$CIRCLE_BRANCH goveralls -coverprofile=profile.cov -service=circleci -repotoken $COVERALLS_TOKEN && \
-        make build #attempt building a container
+    - cd $PROJECT_ROOT && GIT_BRANCH=$CIRCLE_BRANCH goveralls -coverprofile=profile.cov -service=circleci -repotoken $COVERALLS_TOKEN && make build #attempt building a container
 
 notify:
   webhooks:
