--- a/circle.yml
+++ b/circle.yml
@@ -17,7 +17,8 @@ dependencies:
   override:
     - echo $PROJECT_ROOT/hello
   post:
-    - make install
+    - make install:
+        parallel: true
 checkout:
   post:
     - mkdir -p ${GOPATH%%:*}/src/github.com/${CIRCLE_PROJECT_USERNAME}
@@ -25,10 +26,13 @@ checkout:
     - cp -R $(pwd) ${GOPATH%%:*}/src/github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}
 test:
   override:
-    - cd $PROJECT_ROOT && make test
+    - cd $PROJECT_ROOT && make test:
+        parallel: true
   post:
-    - goxc -tasks='xc archive' -bc 'linux' -arch 'amd64' -d $CIRCLE_ARTIFACTS -n wt -wd wt
-    - cd $PROJECT_ROOT && GIT_BRANCH=$CIRCLE_BRANCH goveralls -coverprofile=profile.cov -service=circleci -repotoken $COVERALLS_TOKEN && make build #attempt building a container
+    - goxc -tasks='xc archive' -bc 'linux' -arch 'amd64' -d $CIRCLE_ARTIFACTS -n wt -wd wt:
+        parallel: true
+    - cd $PROJECT_ROOT && GIT_BRANCH=$CIRCLE_BRANCH goveralls -coverprofile=profile.cov -service=circleci -repotoken $COVERALLS_TOKEN && make build:
+        parallel: true
 
 notify:
   webhooks:
