--- a/circle.yml
+++ b/circle.yml
@@ -31,7 +31,8 @@ test:
   post:
     - goxc -tasks='xc archive' -bc 'linux' -arch 'amd64' -d $CIRCLE_ARTIFACTS -n wt -wd wt:
         parallel: true
-    - cd $PROJECT_ROOT && GIT_BRANCH=$CIRCLE_BRANCH goveralls -coverprofile=profile.cov -service=circleci -repotoken $COVERALLS_TOKEN && make build:
+    - cd $PROJECT_ROOT && GIT_BRANCH=$CIRCLE_BRANCH goveralls -coverprofile=profile.cov -service=circleci -repotoken $COVERALLS_TOKEN
+    - cd $PROJECT_ROOT && make build:
         parallel: true
 
 notify:
