debug pkgconfig more

--- a/circle.yml
+++ b/circle.yml
@@ -20,6 +20,7 @@ dependencies:
         parallel: true
 checkout:
   post:
+    make pkgconfig #check output of pkg-config
 test:
   override:
     - cd $PROJECT_ROOT && make test:
