--- a/circle.yml
+++ b/circle.yml
@@ -18,9 +18,9 @@ dependencies:
   override:
     - cd $PROJECT_ROOT && make deps:
         parallel: true
-checkout:
   post:
-    make pkgconfig #check output of pkg-config
+    - make pkgconfig #check output of pkg-config
+checkout:
 test:
   override:
     - cd $PROJECT_ROOT && make test:
