update godeps for 3.2.1

--- a/Godeps/_workspace/src/github.com/wellington/go-libsass/Makefile
+++ b/Godeps/_workspace/src/github.com/wellington/go-libsass/Makefile
@@ -4,7 +4,7 @@ fetch:
 	git submodule sync
 	git submodule update --init
 deps: fetch
-	cd libsass-src; autoreconf -fvi && \
+	cd libsass-src; make clean && autoreconf -fvi && \
 		./configure --disable-shared --prefix=$(shell pwd) --disable-silent-rules --disable-dependency-tracking && \
 		make install
 .PHONY: test
