build dep changes

--- a/circle.yml
+++ b/circle.yml
@@ -22,7 +22,7 @@ dependencies:
     - godep restore
   post:
     - cd $GO_LIBSASS; git submodule sync && git submodule update --init
-    - cd $GO_LIBSASS; make deps #build libsass
+    - cd $GO_LIBSASS; #HAHA not needed anymore! make deps #build libsass
 test:
   override:
     - cd $PROJECT_ROOT && make test:
