cache dependent packages

--- a/circle.yml
+++ b/circle.yml
@@ -20,6 +20,7 @@ dependencies:
   override:
     - make godep
     - godep restore
+    - go build -i -v
   post:
     - cd $GO_LIBSASS; git submodule sync && git submodule update --init
     - cd $GO_LIBSASS; #HAHA not needed anymore! make deps #build libsass
