take out of powershell

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -33,9 +33,10 @@ install:
   #retrieve go 1.5
   #- go get -f -u -d github.com/golang/go
   - git clone -q git://github.com/golang/go.git c:\go15\
-  - ps: |
-      cd C:\go15\src
-      ./make.bat
+  # - ps: |
+  #     cd C:\go15\src
+  #     ./make.bat
+  - cd C:\go15\src && ./make.bat
   - which -a go
   - go version
   - go get github.com/tools/godep
