switch to go15 beta release

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,13 +31,13 @@ install:
   - echo %PATH%
   - echo %GOPATH%
   #retrieve go 1.5
-  #- go get -f -u -d github.com/golang/go
-  - git clone -q git://github.com/golang/go.git c:\go15\
-  # - ps: |
-  #     cd C:\go15\src
-  #     ./make.bat
-  - cd C:\go15\src && run make.bat
-  - which -a go
+  - ps: |
+      $file = "go1.5beta1.windows-amd64.zip"
+      $url  = "https://storage.googleapis.com/golang/"
+      $url += $file
+      Invoke-WebRequest -UserAgent wget -Uri $url -OutFile go1.5beta1.windows-amd64.zip
+      &7z x -OC:\go15 go1.5beta1.windows-amd64.zip > &null
+  - find C:\go15
   - go version
   - go get github.com/tools/godep
   - godep restore
