--- a/appveyor.yml
+++ b/appveyor.yml
@@ -45,8 +45,8 @@ install:
 
 build_script:
   #- go build -o wt.exe -ldflags "-extldflags '-static' -X=github.com/wellington/wellington/version.Version=%WIN_VER%" github.com/wellington/wellington/wt
-  - goxc -help tasks
-  - goxc -tasks='archive-zip' -build-ldflags "-X github.com/wellington/wellington/version.Version=%WIN_VER%" -bc='windows' -arch='amd64' -wd=wt -d=. -n wt
+  - goxc -t
+  - goxc -tasks='archive' -build-ldflags "-X github.com/wellington/wellington/version.Version=%WIN_VER%" -bc='windows' -wd=wt -d=. -n wt
 
 artifacts:
   - path: snapshot/wt_windows_amd64.zip
