--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,6 +47,10 @@ build_script:
   - go build -o wt.exe -ldflags "-extldflags '-static' -X=github.com/wellington/wellington/version.Version=%WIN_VER%" github.com/wellington/wellington/wt
 after_build:
   - 7z a wt_windows_amd64.zip wt.exe
+
+after_test:
+  - go test -race ./...
+
 artifacts:
   - path: wt_windows_amd64.zip
     name: wt_windows_amd64.zip
