--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,12 +17,16 @@ install:
   # install gcc (needed for sqlite3)
   #- choco install -y mingw
   #- set PATH=C:\tools\mingw64\bin;C:\gopath\bin;%PATH%
+
+
   - ps: |
       # Install MinGW.
       $url  = "http://sourceforge.net/projects/mingw-w64/files/"
       $url += "Toolchains%20targetting%20Win64/Personal%20Builds/"
       $url += "mingw-builds/4.9.2/threads-win32/seh/"
       $url += "x86_64-4.9.2-release-win32-seh-rt_v3-rev0.7z/download"
+      # mirror on github for faster downloads
+      $url  = "https://github.com/wellington/binaries/blob/master/x86_64-4.9.2-release-win32-seh-rt_v4-rev3.7z?raw=true"
       Invoke-WebRequest -UserAgent wget -Uri $url -OutFile x86_64-4.9.2-release-win32-seh-rt_v3-rev0.7z
       &7z x -oC:\ x86_64-4.9.2-release-win32-seh-rt_v3-rev0.7z > $null
   - set PATH=C:\mingw64\bin;C:\go15\go\bin;C:\gopath\bin;%PATH%
