--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,14 +9,14 @@ platform:
 
 environment:
   global:
-    MSYS_BASEBER: 20150512
+    MSYS2_BASEVER: 20150512
     GOPATH: c:\gopath
     WIN_VER: windows-na
     CGO_ENABLED: 1
     GOROOT_BOOTSTRAP: C:\go
     GOROOT: C:\go15\go
   matrix:
-    MSYS2_ARCH: x86_64
+    - MSYS2_ARCH: x86_64
 
 install:
   # install nodejs and npm
