--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,7 +26,7 @@ install:
   - 7z x msys2.tar.xz
   - 7z x msys2.tar > NUL
   - msys64\usr\bin\bash -lc ""
-  - msys64\usr\bin\bash -lc "for i in {1..3}; do pacman --noconfirm -Suy mingw-w64-%MSYS2_ARCH%-{ragel,freetype,icu,gettext} libtool pkg-config gcc make autoconf automake perl && break || sleep 15; done"
+  - msys64\usr\bin\bash -lc "for i in {1..3}; do pacman --noconfirm -Suy mingw-w64-%MSYS2_ARCH%-{ragel,freetype,icu,gettext} gcc make && break || sleep 15; done"
   - set PATH=C:\go15\go\bin;C:\gopath\bin;%PATH%
   - set CC=gcc
   - set CXX=g++
