why not give it a shot

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -49,7 +49,7 @@ install:
   - godep restore
 
 build_script:
-  - make windows
+  - mingw32-make windows
 after_build:
   - 7z a wt_windows_amd64.zip wt.exe
 artifacts:
