--- a/Dockerfile.scratch
+++ b/Dockerfile.scratch
@@ -11,4 +11,4 @@ EXPOSE 12345
 VOLUME "/data"
 WORKDIR /data
 
-CMD wt serve --httppath=$HOST -p /data --images-dir /data/img -b /data/build --gen /data/build/img
+CMD wt serve -p /data --images-dir /data/img -b /data/build --gen /data/build/img
