circle succccccks at updating dependencies, rm all possible deps

--- a/circle.yml
+++ b/circle.yml
@@ -15,7 +15,7 @@ dependencies:
   #bunch of bad stuff b/c circleci has issues with Go
   pre:
     - mkdir -p ${GOPATH%%:*}/src/github.com/${CIRCLE_PROJECT_USERNAME}
-    - rm -rf ${GOPATH%%:*}/src/github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}
+    - rm -rf ${GOPATH%%:*}/src/github.com/${CIRCLE_PROJECT_USERNAME}
     - cp -R $(pwd) ${GOPATH%%:*}/src/github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}
     - make godep
     - godep restore
