--- a/circle.yml
+++ b/circle.yml
@@ -7,8 +7,13 @@ machine:
     GO_LIBSASS: "$HOME/.go_workspace/src/github.com/wellington/go-libsass"
     PKG_CONFIG_PATH: "$GO_LIBSASS/lib/pkgconfig"
     GIT_BRANCH: $CIRCLE_BRANCH
-    #deprecated
-    LIBSASS_VERSION: $(cat $HOME/$CIRCLE_PROJECT_REPONAME/.libsass_version)
+    GO15VENDOREXPERIMENT: 1
+  pre:
+    - go version
+    - go version | grep 1.5.1 || sudo rm -rf /usr/local/go
+    - wget https://storage.googleapis.com/golang/go1.5.1.linux-amd64.tar.gz
+    - sudo tar -C /usr/local -xzf go1.5.1.linux-amd64.tar.gz
+    - go version
 dependencies:
   #cache_directories:
     #- libsass-src
@@ -17,21 +22,18 @@ dependencies:
     - mkdir -p ${GOPATH%%:*}/src/github.com/${CIRCLE_PROJECT_USERNAME}
     - rm -rf ${GOPATH%%:*}/src/github.com/${CIRCLE_PROJECT_USERNAME}/*
     - ln -sf ~/${CIRCLE_PROJECT_REPONAME} ${GOPATH%%:*}/src/github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}
-    - make godep
-    - godep restore
-  override:
-    - go test -i -v       # cache go-libsass
-  post:
-    - go test -i -v -race # cache go-libsass with race detection
 test:
   override:
     - cd $PROJECT_ROOT && make test:
         parallel: true
+        timeout: 60
   post:
     - goxc -tasks='xc archive' -bc 'linux' -build-ldflags="-extldflags '-static' -X github.com/wellington/wellington/version.Version $WT_VERSION" -pv $WT_VERSION -arch 'amd64' -d $CIRCLE_ARTIFACTS -n wt -wd wt:
         parallel: true
-    - cd $PROJECT_ROOT && GIT_BRANCH=$CIRCLE_BRANCH goveralls -coverprofile=profile.cov -service=circleci -repotoken $COVERALLS_TOKEN
-    - cd $PROJECT_ROOT && make build
+    - cd $PROJECT_ROOT && GIT_BRANCH=$CIRCLE_BRANCH goveralls -coverprofile=profile.cov -service=circleci -repotoken $COVERALLS_TOKEN:
+        background: true
+    - cd $PROJECT_ROOT && make build:
+        parallel: true
 
 notify:
   webhooks:
