--- a/circle.yml
+++ b/circle.yml
@@ -8,8 +8,6 @@ machine:
     PKG_CONFIG_PATH: "$GO_LIBSASS/lib/pkgconfig"
     GIT_BRANCH: $CIRCLE_BRANCH
     GO15VENDOREXPERIMENT: 1
-  go:
-    verion: 1.5.1
   pre:
     - go version
     - go version | grep 1.5.1 || sudo rm -rf /usr/local/go
@@ -24,6 +22,7 @@ dependencies:
     - mkdir -p ${GOPATH%%:*}/src/github.com/${CIRCLE_PROJECT_USERNAME}
     - rm -rf ${GOPATH%%:*}/src/github.com/${CIRCLE_PROJECT_USERNAME}/*
     - ln -sf ~/${CIRCLE_PROJECT_REPONAME} ${GOPATH%%:*}/src/github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}
+  override:
 test:
   override:
     - cd $PROJECT_ROOT && make test:
