--- a/circle.yml
+++ b/circle.yml
@@ -23,6 +23,7 @@ dependencies:
     - rm -rf ${GOPATH%%:*}/src/github.com/${CIRCLE_PROJECT_USERNAME}/*
     - ln -sf ~/${CIRCLE_PROJECT_REPONAME} ${GOPATH%%:*}/src/github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}
   override:
+    - echo "deps are vendored don't run go get"
 test:
   override:
     - cd $PROJECT_ROOT && make test:
