--- a/circle.yml
+++ b/circle.yml
@@ -32,7 +32,7 @@ test:
   post:
     - goxc -tasks='xc archive' -bc 'linux' -build-ldflags="-extldflags '-static' -X github.com/wellington/wellington/version.Version $WT_VERSION" -pv $WT_VERSION -arch 'amd64' -d $CIRCLE_ARTIFACTS -n wt -wd wt:
         parallel: true
-    - cd $PROJECT_ROOT && GIT_BRANCH=$CIRCLE_BRANCH goveralls -coverprofile=profile.cov -service=circleci -repotoken $COVERALLS_TOKEN:
+    - cd $PROJECT_ROOT && GIT_BRANCH=$CIRCLE_BRANCH goveralls -coverprofile=gover.coverprofile -service=circleci -repotoken $COVERALLS_TOKEN:
         background: true
     - cd $PROJECT_ROOT && make build:
         parallel: true
