--- a/circle.yml
+++ b/circle.yml
@@ -23,19 +23,17 @@ dependencies:
     - rm -rf ${GOPATH%%:*}/src/github.com/${CIRCLE_PROJECT_USERNAME}/*
     - ln -sf ~/${CIRCLE_PROJECT_REPONAME} ${GOPATH%%:*}/src/github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}
   override:
+    - go get -u github.com/laher/goxc
     - echo "deps are vendored don't run go get"
 test:
   override:
     - cd $PROJECT_ROOT && make test:
         parallel: true
         timeout: 60
+    - cd $PROJECT_ROOT && make cover
   post:
-    - goxc -tasks='xc archive' -bc 'linux' -build-ldflags="-extldflags '-static' -X github.com/wellington/wellington/version.Version $WT_VERSION" -pv $WT_VERSION -arch 'amd64' -d $CIRCLE_ARTIFACTS -n wt -wd wt:
-        parallel: true
     - cd $PROJECT_ROOT && GIT_BRANCH=$CIRCLE_BRANCH goveralls -coverprofile=gover.coverprofile -service=circleci -repotoken $COVERALLS_TOKEN:
         background: true
-    - cd $PROJECT_ROOT && make build:
-        parallel: true
 
 notify:
   webhooks:
@@ -43,6 +41,14 @@ notify:
     # gitter hook
     - url: https://webhooks.gitter.im/e/bf9c8f0282b914859ce2
 deployment:
+  goxc:
+    commands:
+      - godep goxc -tasks='xc archive' -bc 'linux' -build-ldflags="-extldflags '-static' -X github.com/wellington/wellington/version.Version $WT_VERSION" -pv $WT_VERSION -arch 'amd64' -d $CIRCLE_ARTIFACTS -n wt -wd wt:
+        parallel: true
+  container:
+    commands:
+      - cd $PROJECT_ROOT && make build:
+        parallel: true
   hub:
     branch: [master]
     commands:
