--- a/circle.yml
+++ b/circle.yml
@@ -45,9 +45,10 @@ deployment:
     branch: /*/
     commands:
       - godep goxc -tasks='xc archive' -bc 'linux' -build-ldflags="-extldflags '-static' -X github.com/wellington/wellington/version.Version $WT_VERSION" -pv $WT_VERSION -arch 'amd64' -d $CIRCLE_ARTIFACTS -n wt -wd wt
-  container:
-    commands:
-      - cd $PROJECT_ROOT && make build
+  # container:
+  #   branch: /*/
+  #   commands:
+  #     - cd $PROJECT_ROOT && make build
   hub:
     branch: [master]
     commands:
