--- a/circle.yml
+++ b/circle.yml
@@ -23,7 +23,6 @@ dependencies:
     - rm -rf ${GOPATH%%:*}/src/github.com/${CIRCLE_PROJECT_USERNAME}/*
     - ln -sf ~/${CIRCLE_PROJECT_REPONAME} ${GOPATH%%:*}/src/github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}
   override:
-    - go get -u github.com/laher/goxc
     - echo "deps are vendored don't run go get"
 test:
   override:
@@ -44,6 +43,7 @@ deployment:
   goxc:
     branch: /*/
     commands:
+      - goxc --version
       - godep goxc -tasks='xc archive' -bc 'linux' -build-ldflags="-extldflags '-static' -X github.com/wellington/wellington/version.Version $WT_VERSION" -pv $WT_VERSION -arch 'amd64' -d $CIRCLE_ARTIFACTS -n wt -wd wt
   # container:
   #   branch: /*/
