--- a/circle.yml
+++ b/circle.yml
@@ -31,8 +31,7 @@ test:
         timeout: 60
     - cd $PROJECT_ROOT && make cover
   post:
-    - cd $PROJECT_ROOT && GIT_BRANCH=$CIRCLE_BRANCH goveralls -coverprofile=gover.coverprofile -service=circleci -repotoken $COVERALLS_TOKEN:
-        background: true
+    - cd $PROJECT_ROOT && GIT_BRANCH=$CIRCLE_BRANCH goveralls -coverprofile gover.coverprofile -service circleci -repotoken $COVERALLS_TOKEN
 
 notify:
   webhooks:
