--- a/circle.yml
+++ b/circle.yml
@@ -30,9 +30,8 @@ test:
         parallel: true
         timeout: 60
     - cd $PROJECT_ROOT && make cover
-  post:
+    - cd $PROJECT_ROOT && cat gover.coverprofile
     - cd $PROJECT_ROOT && GIT_BRANCH=$CIRCLE_BRANCH goveralls -coverprofile gover.coverprofile -service circleci -repotoken $COVERALLS_TOKEN
-
 notify:
   webhooks:
     # A list of hook hashes, containing the url field
