--- a/circle.yml
+++ b/circle.yml
@@ -14,8 +14,6 @@ machine:
     - wget https://storage.googleapis.com/golang/go1.5.1.linux-amd64.tar.gz
     - sudo tar -C /usr/local -xzf go1.5.1.linux-amd64.tar.gz
     - go version
-general:
-  build_dir: $PROJECT_ROOT
 dependencies:
   #cache_directories:
     #- libsass-src
@@ -31,6 +29,8 @@ test:
     - make test:
         parallel: true
         timeout: 60
+        pwd:
+          $PROJECT_ROOT
     - cd $PROJECT_ROOT && make cover
     - cd $PROJECT_ROOT && cat gover.coverprofile
     - cd $PROJECT_ROOT && GIT_BRANCH=$CIRCLE_BRANCH goveralls -coverprofile gover.coverprofile -service circleci -repotoken $COVERALLS_TOKEN
