--- a/circle.yml
+++ b/circle.yml
@@ -4,6 +4,7 @@ machine:
   environment:
     WT_VERSION: $(cat $HOME/$CIRCLE_PROJECT_REPONAME/version.txt)
     PROJECT_ROOT: $HOME/.go_workspace/src/github.com/wellington/wellington
+    REL_PROJECT_ROOT: ../.go_workspace/src/github.com/wellington/wellington
     GO_LIBSASS: "$HOME/.go_workspace/src/github.com/wellington/go-libsass"
     PKG_CONFIG_PATH: "$GO_LIBSASS/lib/pkgconfig"
     GIT_BRANCH: $CIRCLE_BRANCH
@@ -30,7 +31,7 @@ test:
         parallel: true
         timeout: 60
         pwd:
-          $PROJECT_ROOT
+          $REL_PROJECT_ROOT
     - cd $PROJECT_ROOT && make cover
     - cd $PROJECT_ROOT && cat gover.coverprofile
     - cd $PROJECT_ROOT && GIT_BRANCH=$CIRCLE_BRANCH goveralls -coverprofile gover.coverprofile -service circleci -repotoken $COVERALLS_TOKEN
