--- a/circle.yml
+++ b/circle.yml
@@ -15,6 +15,8 @@ machine:
     - wget https://storage.googleapis.com/golang/go1.5.1.linux-amd64.tar.gz
     - sudo tar -C /usr/local -xzf go1.5.1.linux-amd64.tar.gz
     - go version
+general:
+  build_dir: $REL_PROJECT_ROOT
 dependencies:
   #cache_directories:
     #- libsass-src
@@ -32,8 +34,10 @@ test:
         timeout: 60
         pwd:
           $REL_PROJECT_ROOT
-    - cd $PROJECT_ROOT && make cover
-    - cd $PROJECT_ROOT && cat gover.coverprofile
+    - make cover:
+        pwd:
+          $REL_PROJECT_ROOT
+    - cat gover.coverprofile
     - cd $PROJECT_ROOT && GIT_BRANCH=$CIRCLE_BRANCH goveralls -coverprofile gover.coverprofile -service circleci -repotoken $COVERALLS_TOKEN
 notify:
   webhooks:
