--- a/circle.yml
+++ b/circle.yml
@@ -32,11 +32,9 @@ test:
     - make test:
         parallel: true
         timeout: 60
-    - make cover:
-        pwd:
-          $REL_PROJECT_ROOT
+    - make cover
     - cat gover.coverprofile
-    - cd $PROJECT_ROOT && GIT_BRANCH=$CIRCLE_BRANCH goveralls -coverprofile gover.coverprofile -service circleci -repotoken $COVERALLS_TOKEN
+    - GIT_BRANCH=$CIRCLE_BRANCH goveralls -coverprofile gover.coverprofile -service circleci -repotoken $COVERALLS_TOKEN
 notify:
   webhooks:
     # A list of hook hashes, containing the url field
