--- a/circle.yml
+++ b/circle.yml
@@ -46,7 +46,8 @@ deployment:
     commands:
       - goxc --version
       - godep goxc -tasks='xc archive' -bc 'linux' -build-ldflags="-extldflags '-static' -X github.com/wellington/wellington/version.Version $WT_VERSION" -pv $WT_VERSION -arch 'amd64' -d $CIRCLE_ARTIFACTS -n wt -wd wt
-      - cd $PROJECT_ROOT && make build
+      # build docker container
+      - make build
   hub:
     branch: [master]
     commands:
