--- a/circle.yml
+++ b/circle.yml
@@ -45,6 +45,7 @@ deployment:
   goxc:
     branch: master
     commands:
+      - make goxc
       - goxc --version
       - godep goxc -tasks='xc archive' -bc 'linux' -build-ldflags="-extldflags '-static' -X github.com/wellington/wellington/version.Version $WT_VERSION" -pv $WT_VERSION -arch 'amd64' -d $CIRCLE_ARTIFACTS -n wt -wd wt
       # build docker container
