--- a/circle.yml
+++ b/circle.yml
@@ -46,6 +46,7 @@ deployment:
     branch: master
     commands:
       - make goxc
+      - godep restore
       - goxc -tasks='xc archive' -bc 'linux' -build-ldflags="-extldflags '-static' -X github.com/wellington/wellington/version.Version $WT_VERSION" -pv $WT_VERSION -arch 'amd64' -d $CIRCLE_ARTIFACTS -n wt -wd wt
       # build docker container
       - make build
