--- a/circle.yml
+++ b/circle.yml
@@ -37,6 +37,9 @@ test:
     - cat gover.coverprofile
     - GIT_BRANCH=$CIRCLE_BRANCH goveralls -coverprofile gover.coverprofile -service circleci -repotoken $COVERALLS_TOKEN
 notify:
+  post:
+    # unpack vendor deps for goxc
+    - godep restore
   webhooks:
     # A list of hook hashes, containing the url field
     # gitter hook
@@ -46,7 +49,6 @@ deployment:
     branch: master
     commands:
       - make goxc
-      - godep restore
       - goxc -tasks='xc archive' -bc 'linux' -build-ldflags="-extldflags '-static' -X github.com/wellington/wellington/version.Version $WT_VERSION" -pv $WT_VERSION -arch 'amd64' -d $CIRCLE_ARTIFACTS -n wt -wd wt
       # build docker container
       - make build
