--- a/circle.yml
+++ b/circle.yml
@@ -15,16 +15,16 @@ machine:
     - wget https://storage.googleapis.com/golang/go1.5.1.linux-amd64.tar.gz
     - sudo tar -C /usr/local -xzf go1.5.1.linux-amd64.tar.gz
     - go version
+  #bunch of bad stuff b/c circleci has issues with Go
+  post:
+    - mkdir -p ${GOPATH%%:*}/src/github.com/${CIRCLE_PROJECT_USERNAME}
+    - rm -rf ${GOPATH%%:*}/src/github.com/${CIRCLE_PROJECT_USERNAME}/*
+    - ln -sf ~/${CIRCLE_PROJECT_REPONAME} ${GOPATH%%:*}/src/github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}
 general:
   build_dir: ../.go_workspace/src/github.com/wellington/wellington
 dependencies:
   #cache_directories:
     #- libsass-src
-  #bunch of bad stuff b/c circleci has issues with Go
-  pre:
-    - mkdir -p ${GOPATH%%:*}/src/github.com/${CIRCLE_PROJECT_USERNAME}
-    - rm -rf ${GOPATH%%:*}/src/github.com/${CIRCLE_PROJECT_USERNAME}/*
-    - ln -sf ~/${CIRCLE_PROJECT_REPONAME} ${GOPATH%%:*}/src/github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}
   override:
     - echo "deps are vendored don't run go get"
     - git submodule update --init --recursive
@@ -38,7 +38,7 @@ test:
     - GIT_BRANCH=$CIRCLE_BRANCH goveralls -coverprofile gover.coverprofile -service circleci -repotoken $COVERALLS_TOKEN
   post:
     # unpack vendor deps for goxc
-    - godep restore
+    - godep restore -v
 notify:
   webhooks:
     # A list of hook hashes, containing the url field
@@ -53,7 +53,7 @@ deployment:
       # build docker container
       - make build
   hub:
-    branch: [master]
+    branch: master
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       - docker push drewwells/wellington
