--- a/circle.yml
+++ b/circle.yml
@@ -22,6 +22,7 @@ machine:
     - ln -sf ~/${CIRCLE_PROJECT_REPONAME} ${GOPATH%%:*}/src/github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}
 general:
   build_dir: ../.go_workspace/src/github.com/wellington/wellington
+  artifacts: ~/${CIRCLE_PROJECT_REPONAME}/snapshot
 dependencies:
   #cache_directories:
     #- libsass-src
@@ -37,8 +38,8 @@ test:
     - cat gover.coverprofile
     - GIT_BRANCH=$CIRCLE_BRANCH goveralls -coverprofile gover.coverprofile -service circleci -repotoken $COVERALLS_TOKEN
   post:
-    # unpack vendor deps for goxc
-    - godep restore -v
+    # unpack vendor deps for goxc, this doesn't work
+    #- godep restore -v
 notify:
   webhooks:
     # A list of hook hashes, containing the url field
@@ -48,7 +49,7 @@ deployment:
   goxc:
     branch: master
     commands:
-      - make goxc
+      - make release
       - goxc -tasks='xc archive' -bc 'linux' -build-ldflags="-extldflags '-static' -X github.com/wellington/wellington/version.Version $WT_VERSION" -pv $WT_VERSION -arch 'amd64' -d $CIRCLE_ARTIFACTS -n wt -wd wt
       # build docker container
       - make build
